Changed theme name, renamed page-home.php to front-page.php

--- a/wp-content/themes/dev test - Goran Presecki/style.css
+++ b/wp-content/themes/dev test - Goran Presecki/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Fairhead Creative Developers Test
+Theme Name: Fairhead Creative Developers Test - Goran Presečki
 Author: Fairhead Creative
 Author URI: http://builtforimpact.net/
 Version: 1.0.0
