--- a/wp-content/themes/dev test - Goran Presecki/style.css
+++ b/wp-content/themes/dev test - Goran Presecki/style.css
@@ -3,7 +3,7 @@ Theme Name: Fairhead Creative Developers Test - Goran Presečki
 Author: Fairhead Creative
 Author URI: http://builtforimpact.net/
 Version: 1.0.0
-Text Domain: devtest
+Text Domain: devtestgoranpresecki
 */
 
 
